# Chesskell

./: .gitignore  .hlint.yml  .travis.yml  AllTests.hs  CHANGELOG.md  Chesskell.cabal  CoreMovement.hs  Figures.hs  Game.hs  Movement.hs  README.md  Setup.hs
Chess/: CoreMovement.hs  Figures.hs  Metrics.hs  Movement.hs
Src/: Game.hs  Program.hs
Src/Chess/: CoreMovement.hs  Figures.hs  Game.hs  Metrics.hs  Movement.hs
Test/: UnitTests.hs
Test/Tests/: CheckTests.hs  CoreMovementTests.hs  FairMetricTests.hs  GameTests.hs  InitialBoardTests.hs  MissingPiecesTests.hs  MoveToTests.hs  MovementTests.hs  PawnReplacementTests.hs  PawnTests.hs  TestSuite.hs
Test/Tests/Core/: CoreMovementTests.hs  MissingPiecesTests.hs  MoveToTests.hs
Test/Tests/Game/: CheckTests.hs  FairMetricTests.hs  GameTests.hs  InitialBoardTests.hs  PawnReplacementTests.hs
Test/Tests/Movement/: MovementTests.hs  PawnTests.hs
Tests/: CheckTests.hs  CoreMovementTests.hs  InitialBoardTests.hs  MissingPiecesTests.hs  MovementTests.hs  PawnReplacementTests.hs  PawnTests.hs  TestHelper.hs  TestSuite.hs
